deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saga-ingress
  namespace: ecommerce-saga
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service: { name: order-service, port: { number: 3000 } }
          - path: /health(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service: { name: order-service, port: { number: 3000 } }
